--- a/rebar.config
+++ b/rebar.config
@@ -1,16 +1,22 @@
 %% -*- mode: erlang;erlang-indent-level: 4;indent-tabs-mode: nil -*-
 %% ex: ts=4 sw=4 ft=erlang et
-{erl_opts, [debug_info]}.
+{erl_opts, [debug_info,
+            {parse_transform, lager_transform}
+]}.
 
 {cover_enabled, true}.
 
 {deps,
  [{lager, ".*",
    {git, "https://github.com/basho/lager.git", {branch, "master"}}},
+  {meck, ".*",
+   {git, "git://github.com/eproxus/meck.git", {branch, "master"}}},
   {erlzmq, "2.0",
    {git, "git://github.com/zeromq/erlzmq2.git", {tag, "39c30bf5555d4d2e9859894e4ad9c3a33fc8a01a"}}},
   {jiffy, ".*", {git, "git://github.com/davisp/jiffy.git", {tag, "0.4.3"}}},
   {chef_authn, ".*",
    {git, "git@github.com:opscode/chef_authn.git", {tag, "d9e4ffd3d96206d5e826e0336973e4d9dbd8304f"}}},
-  {ej, ".*", {git, "git@github.com:seth/ej.git", {branch, "master"}}}
+  {ej, ".*", {git, "git@github.com:seth/ej.git", {branch, "master"}}},
+  {ibrowse, "3.0.4",
+   {git, "git://github.com/cmullaparthi/ibrowse.git", {tag, "v3.0.4"}}}
 ]}.
