Also use opscode fork of ibrowse

--- a/rebar.config
+++ b/rebar.config
@@ -20,7 +20,7 @@
    {git, "https://github.com/vinoski/erlsha2", {branch, "master"}}},
   {ej, ".*", {git, "git@github.com:seth/ej.git", {branch, "master"}}},
   {ibrowse, "3.0.4",
-   {git, "git://github.com/cmullaparthi/ibrowse.git", {tag, "v3.0.4"}}},
+   {git, "git://github.com/opscode/ibrowse.git", {tag, "v4.0.1.1"}}},
   {envy, ".*",
    {git, "git@github.com:manderson26/envy.git", {branch, "master"}}}
  ]}.
