Add folsom as a dep in pushy_common and start it up when needed for testing

--- a/rebar.config
+++ b/rebar.config
@@ -22,5 +22,7 @@
   {ibrowse, "4.0.1.1",
    {git, "git://github.com/opscode/ibrowse.git", {tag, "v4.0.1.1"}}},
   {envy, ".*",
-   {git, "git@github.com:manderson26/envy.git", {branch, "master"}}}
+   {git, "git@github.com:manderson26/envy.git", {branch, "master"}}},
+  {folsom, ".*",
+   {git, "git@github.com:boundary/folsom.git", {branch, "master"}}}
  ]}.
