new gen_zmq dep

--- a/rebar.config
+++ b/rebar.config
@@ -12,7 +12,7 @@
   {meck, ".*",
    {git, "git://github.com/eproxus/meck.git", {branch, "master"}}},
   {gen_zmq, ".*",
-   {git, "git@github.com:opscode/gen_zmq.git", {branch, "cm/frames"}}},
+   {git, "git@github.com:opscode/gen_zmq.git", {branch, "cm/pushy-hack"}}},
   {jiffy, ".*", {git, "git://github.com/davisp/jiffy.git", {tag, "0.4.3"}}},
   {chef_authn, ".*",
    {git, "git@github.com:opscode/chef_authn.git", {branch, "master"}}},
