use public repo format when possible

--- a/rebar.config
+++ b/rebar.config
@@ -15,14 +15,14 @@
    {git, "git://github.com/jamesc/erlzmq2.git", {branch, "2.1.11-max_sockets"}}},
   {jiffy, ".*", {git, "git://github.com/davisp/jiffy.git", {tag, "0.4.3"}}},
   {chef_authn, ".*",
-   {git, "git@github.com:opscode/chef_authn.git", {branch, "master"}}},
+   {git, "git://github.com/opscode/chef_authn.git", {branch, "master"}}},
   {erlsha2, ".*",
    {git, "https://github.com/vinoski/erlsha2", {branch, "master"}}},
-  {ej, ".*", {git, "git@github.com:seth/ej.git", {branch, "master"}}},
+  {ej, ".*", {git, "git://github.com/seth/ej", {branch, "master"}}},
   {ibrowse, "4.0.1.1",
    {git, "git://github.com/opscode/ibrowse.git", {tag, "v4.0.1.1"}}},
   {envy, ".*",
-   {git, "git@github.com:manderson26/envy.git", {branch, "master"}}},
+   {git, "git://github.com/manderson26/envy.git", {branch, "master"}}},
   {folsom, ".*",
-   {git, "git@github.com:boundary/folsom.git", {branch, "master"}}}
+   {git, "git://github.com/boundary/folsom.git", {branch, "master"}}}
  ]}.
