Switch from erlzmq to erlang-czmq

--- a/rebar.config
+++ b/rebar.config
@@ -11,8 +11,8 @@
    {git, "https://github.com/basho/lager.git", {branch, "master"}}},
   {meck, ".*",
    {git, "git://github.com/eproxus/meck.git", {branch, "master"}}},
-  {erlzmq, "4.0",
-   {git, "git://github.com/steven807/erlzmq2.git", {branch, "master"}}},
+  {czmq, "0.1.0",
+   {git, "git://github.com/gar1t/erlang-czmq.git", {branch, "master"}}},
   {jiffy, ".*", {git, "git://github.com/davisp/jiffy.git", {tag, "0.4.3"}}},
   {chef_authn, ".*",
    {git, "git://github.com/opscode/chef_authn.git", {branch, "master"}}},
