use the ma/curve branch of erlzmq2

--- a/rebar.config
+++ b/rebar.config
@@ -12,7 +12,7 @@
   {meck, ".*",
    {git, "git://github.com/eproxus/meck.git", {branch, "master"}}},
   {erlzmq, "4.0",
-   {git, "git://github.com/opscode/erlzmq2.git", {branch, "ma/zmq4"}}},
+   {git, "git://github.com/opscode/erlzmq2.git", {branch, "ma/curve"}}},
   {jiffy, ".*", {git, "git://github.com/davisp/jiffy.git", {tag, "0.4.3"}}},
   {chef_authn, ".*",
    {git, "git://github.com/opscode/chef_authn.git", {branch, "master"}}},
