--- a/rebar.config
+++ b/rebar.config
@@ -10,19 +10,21 @@
  [{lager, ".*",
    {git, "https://github.com/basho/lager.git", {branch, "master"}}},
   {meck, ".*",
-   {git, "git://github.com/eproxus/meck.git", {branch, "master"}}},
+   {git, "https://github.com/eproxus/meck.git", {branch, "master"}}},
   {erlzmq, "2.0",
-   {git, "git://github.com/jamesc/erlzmq2.git", {branch, "2.1.11-max_sockets"}}},
-  {jiffy, ".*", {git, "git://github.com/davisp/jiffy.git", {tag, "0.4.3"}}},
+   {git, "https://github.com/jamesc/erlzmq2", {branch, "2.1.11-max_sockets"}}},
+  {jiffy, ".*",
+   {git, "https://github.com/davisp/jiffy.git", {tag, "0.4.3"}}},
   {chef_authn, ".*",
-   {git, "git@github.com:opscode/chef_authn.git", {branch, "master"}}},
+   {git, "https://github.com/chef/chef_authn.git", {branch, "master"}}},
   {erlsha2, ".*",
-   {git, "https://github.com/vinoski/erlsha2", {branch, "master"}}},
-  {ej, ".*", {git, "git@github.com:seth/ej.git", {branch, "master"}}},
+   {git, "https://github.com/vinoski/erlsha2.git", {branch, "master"}}},
+  {ej, ".*",
+   {git, "https://github.com:/seth/ej.git", {branch, "master"}}},
   {ibrowse, "4.0.1.1",
-   {git, "git://github.com/opscode/ibrowse.git", {tag, "v4.0.1.1"}}},
+   {git, "https://github.com/chef/ibrowse.git", {tag, "v4.0.1.1"}}},
   {envy, ".*",
-   {git, "git@github.com:manderson26/envy.git", {branch, "master"}}},
+   {git, "https://github.com/manderson26/envy.git", {branch, "master"}}},
   {folsom, ".*",
-   {git, "git@github.com:boundary/folsom.git", {branch, "master"}}}
+   {git, "https://github.com/chef/folsom.git", {branch, "master"}}}
  ]}.
