--- a/rebar.config
+++ b/rebar.config
@@ -8,23 +8,26 @@
 
 {deps,
  [{lager, ".*",
-   {git, "https://github.com/basho/lager.git", {branch, "master"}}},
+   {git, "https://github.com/basho/lager", {branch, "master"}}},
   {meck, ".*",
-   {git, "https://github.com/eproxus/meck.git", {branch, "master"}}},
-  {erlzmq, "2.0",
-   {git, "https://github.com/jamesc/erlzmq2", {branch, "2.1.11-max_sockets"}}},
+   {git, "https://github.com/eproxus/meck", "master"}},
+  {erlzmq, ".*",
+   {git, "https://github.com/chef/erlzmq2", {branch, "devel"}}},
+%  {jiffy, ".*",
+%         {git, "https://github.com/joedevivo/jiffy", {branch, "master"}}},
+
   {jiffy, ".*",
-   {git, "https://github.com/davisp/jiffy.git", {tag, "0.4.3"}}},
+   {git, "https://github.com/davisp/jiffy", {tag, "0.4.3"}}},
   {chef_authn, ".*",
-   {git, "https://github.com/chef/chef_authn.git", {branch, "master"}}},
+   {git, "https://github.com/chef/chef_authn", {branch, "master"}}},
   {erlsha2, ".*",
-   {git, "https://github.com/vinoski/erlsha2.git", {branch, "master"}}},
+   {git, "https://github.com/vinoski/erlsha2", {branch, "master"}}},
   {ej, ".*",
-   {git, "https://github.com:/seth/ej.git", {branch, "master"}}},
-  {ibrowse, "4.0.1.1",
-   {git, "https://github.com/chef/ibrowse.git", {tag, "v4.0.1.1"}}},
+   {git, "https://github.com/seth/ej", {branch, "master"}}},
+  {ibrowse, ".*",
+   {git, "https://github.com/chef/ibrowse", {tag, "v4.0.1.1"}}},
   {envy, ".*",
-   {git, "https://github.com/manderson26/envy.git", {branch, "master"}}},
+   {git, "https://github.com/manderson26/envy", {branch, "master"}}},
   {folsom, ".*",
-   {git, "https://github.com/chef/folsom.git", {branch, "master"}}}
+   {git, "https://github.com/boundary/folsom", {tag, "0.7.2"}}}
  ]}.
