Pull in new erlzmq2 with correct download URLs
Signed-off-by: Steven Danna <steve@chef.io>

--- a/rebar.config
+++ b/rebar.config
@@ -12,7 +12,7 @@
   {meck, ".*",
    {git, "https://github.com/eproxus/meck", "master"}},
   {erlzmq, ".*",
-   {git, "https://github.com/chef/erlzmq2", {branch, "devel"}}},
+   {git, "https://github.com/chef/erlzmq2", {branch, "ssd/zeromq-download"}}},
 %  {jiffy, ".*",
 %         {git, "https://github.com/joedevivo/jiffy", {branch, "master"}}},
 
