--- a/rebar.config
+++ b/rebar.config
@@ -2,30 +2,43 @@
 %% ex: ts=4 sw=4 ft=erlang et
 {erl_opts, [debug_info,
             {parse_transform, lager_transform}
-]}.
+           ]}.
 
 {cover_enabled, true}.
 
 {deps,
- [{lager, ".*",
-   {git, "https://github.com/basho/lager", {branch, "master"}}},
-  {meck, ".*",
-   {git, "https://github.com/eproxus/meck", "master"}},
-  {erlzmq, ".*",
-   {git, "https://github.com/chef/erlzmq2", {branch, "devel"}}},
-%  {jiffy, ".*",
-%         {git, "https://github.com/joedevivo/jiffy", {branch, "master"}}},
-
-  {jiffy, ".*",
-   {git, "https://github.com/davisp/jiffy", {tag, "0.4.3"}}},
-  {chef_authn, ".*",
-   {git, "https://github.com/chef/chef_authn", {branch, "master"}}},
-  {ej, ".*",
-   {git, "https://github.com/seth/ej", {branch, "master"}}},
-  {ibrowse, ".*",
-   {git, "https://github.com/chef/ibrowse", {tag, "v4.0.1.1"}}},
-  {envy, ".*",
-   {git, "https://github.com/manderson26/envy", {branch, "master"}}},
-  {folsom, ".*",
-   {git, "https://github.com/boundary/folsom", {tag, "0.7.2"}}}
+ [{lager, {git, "https://github.com/basho/lager", {branch, "master"}}},
+  {meck, {git, "https://github.com/eproxus/meck", "master"}},
+  {erlzmq, {git, "https://github.com/chef/erlzmq2", {branch, "devel"}}},
+  {jiffy, {git, "https://github.com/davisp/jiffy", {tag, "0.14.8"}}},
+  {chef_authn, {git, "https://github.com/chef/chef_authn", {branch, "master"}}},
+  {ej, {git, "https://github.com/seth/ej", {branch, "master"}}},
+  {ibrowse, {git, "https://github.com/chef/ibrowse", {tag, "v4.0.1.1"}}},
+  {envy, {git, "https://github.com/manderson26/envy", {branch, "master"}}},
+  {folsom, {git, "https://github.com/boundary/folsom", {tag, "master"}}}
  ]}.
+
+{overrides, [
+             {override, jiffy,
+              [
+               {plugins, [pc]},
+               {provider_hooks,
+                [
+                 {post, [
+                         {compile, {pc, compile}},
+                         {clean, {pc, clean}}
+                        ]}
+                ]}
+              ]},
+             {override, erlzmq,
+              [
+               {plugins, [pc]},
+               {provider_hooks,
+                [
+                 {post, [
+                         {compile, {pc, compile}},
+                         {clean, {pc, clean}}
+                        ]}
+                ]}
+              ]}
+            ]}.
