--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,12 @@
-before_install:
-   - sudo apt-get update -qq
-   - sudo apt-get install -qq uuid-dev
+sudo: false
+branches:
+    only:
+      - master
+
+addons:
+  apt:
+    packages:
+      - uuid-dev
 
 language: erlang
 otp_release:
